objects/Survey_Question_Response__c.object
<CustomObject>
    <description>Custom object built as part of a solution to deliver functionality beyond native Salesforce Surveys. Survey Question Responses relate to Survey_Question__c records, which in turn relate to a Survey__c record. This object specifically stores the responses submitted for a survey.</description>
    <label>Survey Question Response</label>
    <nameField>
        <displayFormat>SQR-{0000000000}</displayFormat>
        <label>Survey Question Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Question Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Data_Type__c</fullName>
        <description>The data type of the question response</description>
        <label>Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Boolean</fullName>
                </value>
                <value>
                    <fullName>Int</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>String</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Text_Value__c</fullName>
        <description>Response provided by a participant for a question.</description>
        <label>Text Value</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Choice_Value__c</fullName>
        <description>Response provided by a participant for the following question types:
Multiple choice
Picklist
Radio
Ranking</description>
        <label>Choice Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_Value__c</fullName>
        <description>Response provided by a participant for the following question types:
Net Promoter Score (NPS)
Rating
Score
Slider</description>
        <label>Number Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsTrueorFalse__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Response provided by a participant for a question type which has only two possible values: True and False.</description>
        <label>IsTrueorFalse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey_Question__c</fullName>
        <description>Lookup to the Survey Question this record is in response to.</description>
        <label>Survey Question</label>
        <referenceTo>Survey_Question__c</referenceTo>
        <relationshipLabel>Survey Question Responses</relationshipLabel>
        <relationshipName>Survey_Question_Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Survey_Response__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The related Survey Response record represents the overall submitted responses by a respondent for a survey invitation.</description>
        <inlineHelpText>Anytime a Survey Invitation link is clicked on, a Survey Response record is generated, even if the responses are not completed. A Survey Response therefore represents the overall status of a respondent&apos;s survey responses - Complete Survey Responses mean all required questions had answers submitted; Started means a link was clicked on but the Survey was not completed.</inlineHelpText>
        <label>Survey Response</label>
        <referenceTo>Survey_Response__c</referenceTo>
        <relationshipLabel>Survey Question Responses</relationshipLabel>
        <relationshipName>Survey_Question_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_Invitation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Survey Invitation record related to this Survey Question Response.</description>
        <label>Survey Invitation</label>
        <referenceTo>Survey_Invitation__c</referenceTo>
        <relationshipLabel>Survey Question Responses</relationshipLabel>
        <relationshipName>Survey_Question_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Response_Id__c</fullName>
        <description>Before the custom Survey__c object was built, Salesforce Surveys were in use. This field stores the legacy Id for the corresponding, historical Salesforce SurveyQuestionResponse record.</description>
        <label>Legacy Response Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <description>Before the custom Survey__c solution was built, native Salesforce Surveys were in use. This field was created in order to accurately report on legacy response records were created.</description>
        <label>Legacy Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Survey_Version_Id__c</fullName>
        <description>Before the custom Survey__c object was built, Salesforce Surveys were in use. This field stores the legacy Id for the corresponding, historical Salesforce Survey Version record.</description>
        <label>Legacy Survey Version Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Completion_DateTime__c</fullName>
        <description>Stores legacy response completion date/time as well as net new records response completion date/time.</description>
        <label>Response Completion Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_SurveyQuestionChoice_Id__c</fullName>
        <description>18 character Salesforce.com Id for the historical Survey Question Choice record related to this record, if applicable.</description>
        <label>Legacy SurveyQuestionChoice Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Survey_Question_Response_Id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Survey Question Response Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
</CustomObject>